Fixed horizontal overflow problem.

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -168,6 +168,7 @@ header
 main
 {
     margin: 0 auto;  
+    overflow-x: hidden;
     @media only screen and (max-width: 1000px){ width: 100%; } 
     @media only screen and (min-width: 1001px){ width: 85%; }     
 }
